[package]
name = "shutthebox"
version = "0.1.0"
authors = ["EJ Kreinar <ejkreinar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
hdrhistogram = "6.0"
tui = "0.10"
termion = "1.5"
rayon = "1.3.1"
num_cpus = "1.13.0"